# python-boilerplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  dev-requirements.txt  dev_requirements.txt  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.cfg
.github/workflows/: test.yaml
app/: __init__.py  app.py  config.py  hello.py  main.py
app/util/: logging.py
config/: config.local.toml
tests/: test_dummy.py  test_hello.py
