[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "python-boilerplate"
description = "Python boilerplate"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [
  "version",
]

[tool.setuptools.packages.find]
where = [ "." ]
exclude = [ "tests*", "tests.*" ]

[tool.setuptools.package-data]
"*" = [ "LICENSE" ]

[tool.setuptools.dynamic]
version = { attr = "app.__version__" }

[tool.ruff]
line-length = 120
lint.select = [ "I" ] # Enable isort rules

[tool.pyproject-fmt]
column_width = 120
indent = 2
keep_full_version = true
max_supported_python = "3.13"

[tool.mypy]
ignore_missing_imports = true
