[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "python-boilerplate"
version = "0.0.0"
description = "Python boilerplate"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "mimesis==18.0.0",
]

[dependency-groups]
dev = [
  "coverage==7.6.10",
  "mypy==1.14.1",
  "pre-commit==4.0.1",
  "ruff==0.8.5",
]

[tool.hatch.build.targets.wheel]
include = [ "app" ]
exclude = [ "tests*", "tests.*" ]

[tool.hatch.build.targets.sdist]
include = [ "app" ]
exclude = [ "tests*", "tests.*" ]

[tool.hatch.build]
include = [ "LICENSE" ]

[tool.ruff]
line-length = 120
lint.select = [ "I" ] # Enable isort rules

[tool.pyproject-fmt]
column_width = 120
indent = 2
keep_full_version = true
max_supported_python = "3.13"

[tool.mypy]
ignore_missing_imports = true
